--- a/config/vufind/export.ini
+++ b/config/vufind/export.ini
@@ -60,3 +60,7 @@ headers[] = "Content-type: application/rdf+xml"
 [BibTeX]
 requiredMethods[] = getTitle
 headers[] = "Content-type: application/x-bibtex; charset=utf-8"
+
+[RIS]
+requiredMethods[] = getTitle
+headers[] = "Content-type: application/x-ris; charset=utf-8"
