Changed the mime type after reading the discussion at https://forums.zotero.org/discussion/242/ris-import-to-zotero-not-endnote-is-not-working/

--- a/config/vufind/export.ini
+++ b/config/vufind/export.ini
@@ -63,4 +63,4 @@ headers[] = "Content-type: application/x-bibtex; charset=utf-8"
 
 [RIS]
 requiredMethods[] = getTitle
-headers[] = "Content-type: application/x-ris; charset=utf-8"
+headers[] = "Content-type: text/application/x-research-info-systems; charset=utf-8"
