--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -133,7 +133,7 @@ year asc = "sort_year asc"
 ; Use the "callnumber" line for LC or the "dewey-sort" line for Dewey Decimal.
 ; If you want to enable both systems for sorting, you can uncomment both lines,
 ; but you will need to add some custom text to distinguish between the two.
-callnumber = sort_callnumber
+;callnumber = sort_callnumber
 ;dewey-sort = sort_callnumber
 
 author = sort_author
@@ -372,7 +372,7 @@ method = ils
 ; old, or five days old, or thirty days old). If using the "ils" method, be careful
 ; about raising the maximum age too high -- searching very long date ranges may put
 ; a load on your ILS.
-ranges = 1,5,30
+ranges = 30,60
 ; This setting only applies when using the "ils" method. It controls the maximum
 ; number of pages of results that will show up when doing a new item search.
 ; It is necessary to limit the number of results to avoid getting a "too many boolean
